--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.2",
     "react-router": "^6.16.0",
     "react-scripts": "5.0.1",
     "recharts": "^2.8.0",
+    "redux": "^4.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
